Removed unused variables and imports, as well as instances that were not properly closed.